<resources>
    <string name="app_name">Bitters</string>
    <string name="client_id">383366225765-6ah1vg40prcfb8p4obf7eo7ttnsnuei3.apps.googleusercontent.com</string>
    <string name="successful_registration">Your account was created! Login to start mixing!</string>
    <string name="unsuccessful_registration">Your account could not be created!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ingredients_spinner_prompt">Ingredients</string>

    <string name="filter_prompt">Choose a filter</string>
    <string name="filter_random_title">Random</string>
    <string name="filter_name_title">Name</string>
    <string name="filter_ingredients_title">Ingredients</string>
    <string name="filter_glass_title">Glass</string>
    <string name="filter_alcoholic_title">Non-Alcoholic</string>
    <string name="filter_favorites_title">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_screen_email_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="remember_me_checkbox_text">Remember Me</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="register_textview_text">Don\'t have an account? Register!</string>
    <string name="cocktail_card_name_placeholder">Cocktail Name</string>
    <string name="custom_cocktail_name_hint">Enter Your Drink Name</string>
    <string name="custom_cocktail_your_ingredients_text">Your Ingredients</string>
    <string name="custom_cocktail_select_ingredients_text">Select up to 15 ingredients</string>
    <string name="custom_cocktail_show_ingredients_textbox_text">Show</string>
    <string name="custom_cocktail_add_instructions_hint">Add Instructions</string>
    <string name="custom_cocktail_save_button_text">Save</string>
    <string name="register_full_name_hint">Full Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_retype_password_hint">Re-Type Password</string>
    <string name="register_button_text">Register</string>
    <string name="view_cocktail_name_placeholder">Cocktail Name</string>
    <string name="view_cocktail_is_alcoholic_checxbox_text">Is Alcoholic</string>
    <string name="ingredient_search_hint">Search by name</string>
</resources>
